# python-sdk

./: .devenv.flake.nix  .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  devenv.nix  lefthook.yml  mise.toml  pyproject.toml
.claude/: CLAUDE.md  settings.json
.devenv/: input-paths.txt  load-exports  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run  tasks.db-shm  tasks.db-wal
.devenv/gc/: shell-1-link
.github/workflows/: test.yml
examples/anthropic_agent/: README.md  simple_agent.py
examples/http_transport/: README.md  simple_http.py
src/prefactor_sdk/: __init__.py  config.py
src/prefactor_sdk/instrumentation/: __init__.py
src/prefactor_sdk/instrumentation/langchain/: __init__.py  callback_handler.py  metadata_extractor.py  middleware.py
src/prefactor_sdk/tracing/: __init__.py  context.py  span.py  tracer.py
src/prefactor_sdk/transport/: base.py  http.py  stdio.py
src/prefactor_sdk/utils/: logging.py  serialization.py
tests/: __init__.py  test_config.py  test_init.py
tests/instrumentation/: __init__.py  test_callback_handler.py  test_metadata_extractor.py  test_middleware.py
tests/integration/: __init__.py  test_langchain_basic.py
tests/sdk/: test_config.py  test_init.py
tests/tracing/: test_context.py  test_span.py  test_tracer.py
tests/transport/: test_http.py  test_stdio.py
tests/utils/: test_logging.py  test_serialization.py
