[project]
name = "prefactor-sdk"
version = "0.1.0"
description = "Prefactor SDK for LangChain Observability"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=1.0.0",  # Stable callback system
    "orjson>=3.9.0",          # Fast JSON serialization
    "aiohttp>=3.9.0",         # HTTP client for async transport
]

[project.optional-dependencies]
dev = [
    "langchain>=1.0.0",            # For integration testing (includes create_agent)
    "langchain-openai>=0.3.0",     # For LLM testing (returns AIMessage in v1.0)
    "langchain-anthropic>=0.4.0",  # For Anthropic/Claude integration
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "aioresponses>=0.7.6",         # For mocking aiohttp in tests
    "ty>=0.0.11",                  # Fast type checker
    "ruff>=0.8.0",                 # Linter and formatter
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prefactor_sdk"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ty]
# ty is designed to work out of the box with minimal configuration

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-ra",                    # Show summary of all test outcomes
    "--strict-markers",       # Raise error on unknown markers
    "--strict-config",        # Raise error on config issues
    "-v",                     # Verbose output
]
