[project]
name = "prefactor-workspace"
version = "0.0.0"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
prefactor-core = { workspace = true }
prefactor-http = { workspace = true }
prefactor-langchain = { workspace = true }

[dependency-groups]
dev = [
    "langchain>=1.0.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.4.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "aioresponses>=0.7.6",
    "ty>=0.0.11",
    "ruff>=0.8.0",
    "prefactor-core",
    "prefactor-http",
    "prefactor-langchain",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ty]
# ty is designed to work out of the box with minimal configuration

# Ignore possibly-missing-attribute warnings in test files
# These warnings occur when accessing attributes on potentially-None values,
# but in tests we're often asserting that values are not None by accessing them
[[tool.ty.overrides]]
include = ["packages/*/tests/**"]

[tool.ty.overrides.rules]
possibly-missing-attribute = "ignore"

[tool.pytest.ini_options]
testpaths = ["packages/core/tests", "packages/http/tests", "packages/langchain/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-v",
]
